# FitViber

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  PHASES.md  README.md  build.bat  build_ci.bat
.claude/: settings.local.json
src/: main.cpp
src/app/: AppConstants.h  MainWindow.cpp  MainWindow.h  ProjectManager.cpp  ProjectManager.h
src/fit/: FitData.h  FitParser.cpp  FitParser.h  FitTrack.cpp  FitTrack.h
src/media/: AudioDecoder.cpp  AudioDecoder.h  FrameQueue.h  ImageUtil.cpp  ImageUtil.h  MediaExporter.cpp  MediaExporter.h  MediaProbe.cpp  MediaProbe.h  VideoDecoder.cpp  VideoDecoder.h  VideoPlaybackEngine.cpp  VideoPlaybackEngine.h
src/overlay/: OverlayConfig.cpp  OverlayConfig.h  OverlayPanel.cpp  OverlayPanel.h  OverlayPanelFactory.cpp  OverlayPanelFactory.h  OverlayRenderer.cpp  OverlayRenderer.h
src/overlay/panels/: CadencePanel.cpp  CadencePanel.h  DistancePanel.cpp  DistancePanel.h  ElevationPanel.cpp  ElevationPanel.h  HeartRatePanel.cpp  HeartRatePanel.h  InclinationPanel.cpp  InclinationPanel.h  LapPanel.cpp  LapPanel.h  MiniMapPanel.cpp  MiniMapPanel.h  PowerPanel.cpp  PowerPanel.h  SpeedPanel.cpp  SpeedPanel.h
src/timeline/: Clip.h  ClipTransform.h  TimeSync.cpp  TimeSync.h  TimelineModel.cpp  TimelineModel.h  TimelineWidget.cpp  TimelineWidget.h  Track.cpp  Track.h
src/ui/: DarkTheme.cpp  DarkTheme.h  MediaBrowser.cpp  MediaBrowser.h  PlaybackController.cpp  PlaybackController.h  PreviewCanvas.cpp  PreviewCanvas.h  PreviewWidget.cpp  PreviewWidget.h  PropertiesPanel.cpp  PropertiesPanel.h
src/util/: ImageUtil.h  TimeUtil.h
test/: test_fit_parser.cpp  test_media_decode.cpp  test_overlay_config.cpp  test_time_sync.cpp
testdata/: 2026-02-10-14-36-07.fit
